Fix: #1451 content such as menus needs to overflow blocks

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -177,10 +177,6 @@
  * +---wt-block-content, wt-block-content-XXX
  */
 
-.wt-block-content {
-	overflow: auto;
-}
-
  /* my page chart enhancements */
 .wt-block-content-charts {
 	display: flex;
@@ -195,10 +191,6 @@
 [dir=rtl] .wt-block-content-charts-block {
     flex-flow: row;
 }
-
-
-
-
 
 /*
  * Any element that is loaded dynamically has the class wt-ajax-load.
